--- a/bai2.html
+++ b/bai2.html
@@ -22,7 +22,7 @@
               <div class="col-6 form-group">
                 <label for="">Mã Sinh Viên : </label>
                 <input type="text" class="form-control" id="txtMaSV" />
-                <span id="spanMaSV" class="text-danger"></span>
+                <span id="spanMaSV" class="text-danger">Mã không hợp lệ</span>
               </div>
               <div class="col-6 form-group">
                 <label for="">Tên Sinh Viên : </label>
@@ -69,7 +69,11 @@
               <button type="button" onclick="" class="btn btn-dark">
                 Reset
               </button>
-              <button type="button" onclick="" class="btn btn-info">
+              <button
+                type="button"
+                onclick="capNhatSinhVien()"
+                class="btn btn-info"
+              >
                 Cập Nhật
               </button>
             </div>
@@ -118,6 +122,8 @@
         integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"
       ></script>
+      <script src="./js/validate.js"></script>
+      <script src="./js/controller.js"></script>
       <script src="./js/main.js"></script>
     </div>
   </body>
