--- a/bai2.html
+++ b/bai2.html
@@ -22,7 +22,7 @@
               <div class="col-6 form-group">
                 <label for="">Mã Sinh Viên : </label>
                 <input type="text" class="form-control" id="txtMaSV" />
-                <span id="spanMaSV" class="text-danger">Mã không hợp lệ</span>
+                <span id="spanMaSV" class="text-danger"></span>
               </div>
               <div class="col-6 form-group">
                 <label for="">Tên Sinh Viên : </label>
@@ -66,7 +66,7 @@
                 Thêm Sinh Viên
               </button>
 
-              <button type="button" onclick="" class="btn btn-dark">
+              <button type="button" onclick="resetForm()" class="btn btn-dark">
                 Reset
               </button>
               <button
@@ -122,6 +122,7 @@
         integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"
       ></script>
+      <script src="./js/dtb.js"></script>
       <script src="./js/validate.js"></script>
       <script src="./js/controller.js"></script>
       <script src="./js/main.js"></script>
